man: add section bugs

--- a/litclock.1
+++ b/litclock.1
@@ -58,3 +58,7 @@ $ litclock
 .Nm
 was written by
 .An Sergey Bronnikov .
+.Sh BUGS
+Due to a limitations in
+.Xr sh 1 ,
+script shows latest quote for desired time.
