litclock: support Portuguese language
Follows up commit 2e036b3cb6c6 ("readme: mention a Portuguese version")
and commit 0479f6a28a35 ("quotes: initial version in Portuguese language").

--- a/litclock.1
+++ b/litclock.1
@@ -49,7 +49,7 @@ Specify a path to a file with quotes.
 Specify a time a format HH:MM to use instead of current time.
 .It Fl l Ar lang
 Specify a language.
-Possible values are "ru" and "en".
+Possible values are "ru", "pt" and "en".
 Default language is "ru".
 .El
 .Pp
